@@ -2,7 +2,7 @@
 <addon
     id="script.mtvguide"
     name="m-TVGuide [COLOR gold][B]EPG[/B][/COLOR]"
-    version="9.9.5-beta.3"
+    version="9.9.5-beta.4"
     provider-name="Mods-kodi">
   <requires>
     <import addon="xbmc.addon" version="17.0.0"/>
@@ -45,6 +45,7 @@
 - Fixed PlayerPL parsing error.
 - Fixed encodings.
 - Optimized performance.
+- Added playlist caching.
 - Bug fixes.
 
 v9.9.4 (2022-03-02)
